--- a/ScriptMaker/ScriptMaker/ScriptMaker.csproj
+++ b/ScriptMaker/ScriptMaker/ScriptMaker.csproj
@@ -46,11 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BGMModel.cs" />
     <Compile Include="BGModel.cs" />
     <Compile Include="CharacterModel.cs" />
     <Compile Include="CommandPack.cs" />
     <Compile Include="CommonParam.cs" />
     <Compile Include="DisplayObjectBase.cs" />
+    <Compile Include="EndModel.cs" />
+    <Compile Include="EventModel.cs" />
     <Compile Include="FlagModel.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -58,11 +61,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IfModel.cs" />
     <Compile Include="ItemModel.cs" />
     <Compile Include="Jump.cs" />
+    <Compile Include="KeyWaitModel.cs" />
+    <Compile Include="LabelModel.cs" />
+    <Compile Include="LoadModel.cs" />
     <Compile Include="MessageModel.cs" />
+    <Compile Include="NameModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectModel.cs" />
+    <Compile Include="SEModel.cs" />
+    <Compile Include="WaitModel.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
